mensagem nenhum favoritado no index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <tr class="noFavAdded hiden">
                             <td class="noFav">
                                 <img src="images/Estrela.svg" alt="Estrela">
-                                <h2>Nenhum favorito ainda</h2>
+                                <h2>Nenhum favoritado</h2>
                             </td>
                             <td></td>
                             <td></td>
